# argus

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  argus.service.template  dev_mock.py  docker-compose.yml  pyproject.toml  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-review.yml  codeql.yml
argus/: __init__.py  config.py  install_service.py  main.py  secrets.py  setup_secrets.py  setup_wizard.py
argus/agent/: __init__.py  decision.py
argus/broker/: __init__.py  robinhood.py
argus/dashboard/: __init__.py  index.html  log_buffer.py  server.py  terminal.py  token_tracker.py  web.py
argus/engine/: autopilot.py  backtest.py  session.py
argus/learning/: __init__.py  flashcards.py
argus/notifications/: notifier.py
argus/risk/: manager.py
argus/screener/: market_intelligence.py
argus/storage/: __init__.py  models.py
argus/strategy/: __init__.py  indicators.py
docs/: mac-mini-setup.md  next-session.md  technical.md
tests/: test_decision_engine.py  test_indicators.py  test_risk_manager.py  test_sanity.py
