[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.5.5"
requires-python = ">=3.12,<3.14"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "robin-stocks>=3.0.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "pandas-ta",
    "numpy>=2.0.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "aiosmtplib>=3.0.0",
    "twilio>=9.0.0",
    "slack-sdk>=3.27.0",
    "schedule>=1.2.0",
    "pyotp>=2.9.0",
    "pytz>=2024.1",
    "pandas-market-calendars>=4.4.0",
    "keyring>=25.0.0",
    "keyrings.alt>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-asyncio"]

[project.scripts]
argus         = "argus.main:main"
argus-web     = "argus.dashboard.web:main"
argus-setup   = "argus.setup_secrets:main"
argus-setup-gui = "argus.setup_wizard:main"
argus-service = "argus.install_service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["argus*"]
